FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES("${CMAKE_INSTALL_PREFIX}/include")

SET(CMAKE_SWIG_FLAGS "")
include_directories(${GSL_INCLUDE_DIRS})
include_directories(${PMF_INCLUDE_DIR})
SET_SOURCE_FILES_PROPERTIES(PMFpack.i PROPERTIES CPLUSPLUS ON)
#SET_SOURCE_FILES_PROPERTIES(pyPMFpack.i PROPERTIES SWIG_FLAGS "-includeall")
EXECUTE_PROCESS(COMMAND python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
MESSAGE("-- Python install directory: ${PYTHON_SITE_PACKAGES}")
#SET(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_SOURCE_DIR})
#message(${CMAKE_SWIG_OUTDIR})
SWIG_ADD_MODULE(PMFpack python PMFpack.i)
SWIG_LINK_LIBRARIES(PMFpack ${PYTHON_LIBRARIES} ${GSL_LIBRARIES} PMF)
install(FILES ${PROJECT_BINARY_DIR}/swig/PMFpack.py ${PROJECT_BINARY_DIR}/swig/_PMFpack.so DESTINATION ${PYTHON_SITE_PACKAGES})
